# hakaton_mandarin

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  EDA_ MandarinAnton_Vladimir_ipynb .ipynb  README.md  compose.yml  data.dvc  datasets.dvc  dvc.yaml  experiment.ipynb  main.py  mandarin.ipynb  mandarin_data_analisys.ipynb  mandarin_model_trainning.ipynb  params.yaml  pyproject.toml  settings.py  setup.cfg
.dvc/: config
.github/workflows/: tests.yml
data/: datasets.dvc  trained_models.dvc
data/trained_models/: ohe_model.pkl  scaler.pkl
data_preparation/: data_prep.py
notebooks/: EDA.ipynb  Mandarin_OHE_experiment.ipynb  Mandarin_Антон.ipynb  Position preprocessing spellchecker+fuzzywuzzy.ipynb  done_обучение_Mandarin (1).ipynb  experiment.ipynb  mandarin_data_analisys.ipynb
results/: metrics.json  params.yaml
results/plots/metrics/: ROC_AUC.tsv
src/api/data_structures/: BankDecisionInput.py  bank_decision.py  errors.py  root.py
src/data_preparation/: data_prep.py  data_preparation.py  test_data_preparation.py
src/domain/: main.py
src/models/: random_forest.py
src/models/common/: split.py
src/models/isolation_forest/: isolation_forest.py
src/models/random_forest/: random_forest.py
src/spi/: data_preprocessing.py  data_preprocessing_exp.py  train.py  train_exp.py  train_rf.py  train_xgboost.py
streamlit/: correct_professions.txt  make_file_with_correct_professions.py  requirements.txt  streamlit_app.py  streamlit_app_Z.py
tests/: conftest.py  test_data_prep.py  test_predict_handler.py  test_root_handler.py
(+21 files in other folders)
