[tool.poetry]
name = "hakaton"
version = "0.1.0"
description = ""
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
pandas = "^2.1.3"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
imbalanced-learn = "^0.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
