[tool.poetry]
name = "hakaton"
version = "0.1.0"
description = ""
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
imbalanced-learn = "^0.11.0"
statsmodels = "^0.14.0"
dvclive = "^3.4.1"
pyarrow = "^14.0.1"
fastparquet = "^2023.10.1"
dvc-s3 = "^2.23.0"
python-box = "^7.1.1"
python-dotenv = "^1.0.0"
ruamel-yaml = "^0.18.5"
python-decouple = "^3.8"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"




[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
black = "^23.12.0"
isort = "^5.13.2"
httpx = "^0.25.0"

[tool.poetry.group.eda.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
